# algos-celegans

./: .gitignore  CLAUDE.md  DECISIONS.md  PHASE0.5_REPORT.md  PHASE0.6_AUDIT.md  PHASE0.7_REPORT.md  PHASE0.8_REPORT.md  PHASE0.9A_REPORT.md  PHASE0.9_REPORT.md  PHASE0_REPORT.md  PHASE1.0_FINDINGS.md  PHASE1.0_REPORT.md  PHASE1.6_REPORT.md  QUESTIONS.md  README.md  ROADMAP.md  data_audit.md  pyproject.toml
data/: modulators_full.md
docs/: design.md  phase0.md  phase1.0.md  phase1.5_design.md  phase1_design.md
notes/: edge_sign_audit.md  phase0.8.1_checkpoint.md  phase0.8.2_checkpoint.md  phase0.8.3_checkpoint.md  subgraph_audit_part1.md  subgraph_audit_part2.md
output/: basic_simulation_summary.txt  comparison_report.txt  comparison_results.json  fc_gap_diagnosis_report.txt  fc_gap_diagnosis_results.json  individual_variation_report.txt  individual_variation_results.json  neuron_specificity_report.txt  neuron_specificity_results.json  pca_audit_report.txt  pca_audit_results.json  phase0_8_2_comparison_report.txt  phase0_8_2_comparison_results.json  phase0_8_3_comparison_report.txt  phase0_8_3_comparison_results.json  phase0_9_comparison_report.txt  phase0_9_comparison_results.json  phase0_9_comparison_results.phase0_9.json  phase0_9_diagnostic_report.txt  phase0_9_diagnostic_results.json
scripts/: run_basic_simulation.py  run_comparison.py  run_fc_gap_diagnosis.py  run_individual_variation.py  run_neuron_specificity.py  run_pca_audit.py  run_phase0_8_2_comparison.py  run_phase0_8_3_comparison.py  run_phase0_9_comparison.py  run_phase0_9_diagnostic.py  (+5 more)
(+54 files in other folders)
