[project]
name = "algos-celegans"
version = "0.1.0"
description = "ALGOS-Celegans Phase 0: C. elegans connectome + CTRNN neural skeleton"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
